cluster/apps/default/actual-budget/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual-budget
  namespace: default
  labels:
    app: actual-budget
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: actual-budget
  template:
    metadata:
      labels:
        app: actual-budget
    spec:
      containers:
        - name: actual-budget
          image: actualbudget/actual-server:26.10.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5006
          volumeMounts:
            - mountPath: "/data"
              name: actual-data-volume
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              memory: 100Mi
      volumes:
        - name: actual-data-volume
          persistentVolumeClaim:
            claimName: actual-budget-pvc
